[gd_scene load_steps=12 format=2]

[ext_resource path="res://screens/Game/HUD.gd" type="Script" id=1]
[ext_resource path="res://lib/ProgressTiles.gd" type="Script" id=2]
[ext_resource path="res://assets/Icons/icon_life_full.png" type="Texture" id=3]
[ext_resource path="res://assets/Icons/icon_life_empty.png" type="Texture" id=4]
[ext_resource path="res://assets/Icons/icon_bomb.png" type="Texture" id=5]
[ext_resource path="res://assets/Themes/progress_border.png" type="Texture" id=6]
[ext_resource path="res://assets/Themes/progress_fill.png" type="Texture" id=7]
[ext_resource path="res://assets/Themes/MatchupPro.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://lib/BlinkingLabel.gd" type="Script" id=9]
[ext_resource path="res://assets/Themes/details_font.tres" type="DynamicFont" id=10]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -2
font_data = ExtResource( 8 )

[node name="HUD" type="Node2D"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_right = 329.0
margin_bottom = 50.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 319.0
margin_bottom = 56.0
custom_constants/separation = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 102.0
margin_bottom = 46.0

[node name="LifeBar" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 102.0
margin_bottom = 18.0
rect_min_size = Vector2( 102, 18 )
script = ExtResource( 2 )
filled_texture = ExtResource( 3 )
empty_texture = ExtResource( 4 )
layout_mode = 0
fill_mode = 0
gap = 3
max_value = 5
value = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 102.0
margin_bottom = 40.0

[node name="BombIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 18.0
margin_bottom = 18.0
texture = ExtResource( 5 )

[node name="BombProgress" type="TextureProgress" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 22.0
margin_right = 102.0
margin_bottom = 18.0
size_flags_horizontal = 3
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 7 )

[node name="BombReadyLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 44.0
margin_right = 103.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "B_FOR_BOMB_LABEL"
align = 2
script = ExtResource( 9 )
colors = [ Color( 1, 0, 0, 1 ), Color( 1, 0.984314, 0.0705882, 1 ) ]
delay = 0.07

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 132.0
margin_right = 155.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "0"
[connection signal="gui_input" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/BombIcon" to="." method="_on_BombIcon_gui_input"]
